# node-bcrypt

./: CMakeLists.txt
include/: nbcrypt.h
src/: nbcrypt.cpp
test/: main.cpp
